# fanman

./: .gitignore  Dockerfile  LICENSE  README.md  compose.portainer.yml  docker-compose.yml  pyproject.toml
.github/workflows/: publish-image.yml
config/: fan_curves.example.json
docs/: HOST_PREREQUISITES.md
src/fanman/: __init__.py  __main__.py  api_routes.py  config_schema.py  curves.py  errors.py  fan_control.py  main.py  polling.py  rate_limit.py  settings.py  smart_monitor.py  state.py  sysfs.py  system_metrics.py
src/fanman/static/: style.css
src/fanman/templates/: index.html
tests/: test_curves.py
